--- a/index.html
+++ b/index.html
@@ -904,6 +904,6 @@ window.addEventListener('click', (event) => {
 });
 
 </script>
-<script type="module" src="/main.js"></script>
+<script type="module" src="./main.js"></script>
 </body>
 </html>
