--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <p>Tech-oriented: The name denotes his relationship to coding and innovation, highlighting the advanced capabilities of VNPAY-QR.</p>
     <p>Inclusive: Designed to appeal to both urban and rural users, Thanh Ma embodies the values of accessibility, education, and unity.</p>
     <div class="image-single">
-      <img src="images/ThánhMã-1.png" class="moodboard">
+      <img src="images/thanhma-1.png" class="moodboard">
       </div>
       <text>Character design</text>
       <h3>Thanh Ma and social media platforms</h3>
