--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
         <p>Lacàph, Collective, Hochiminh, Vietnam</p>
         (2023-2024)
       </div>
-      <div class="grid-item col-2" style="margin: var(--spacing-md) var(--spacing-lg);">
+      <div class="grid-item col-2">
         <p style="font-weight: 600;">Education</p>
         <p>Graphic Design Program</p>
         <p>CSIA Centro Scolastico per le industrie ​artistiche (School of Applied Arts), ​Lugano, Switzerland</p>
@@ -856,7 +856,7 @@
         (2024-2025)
       </div>
       <div class="grid-item col-1"></div>
-    <div class="grid-item col-1" style="margin: var(--spacing-md);">
+    <div class="grid-item col-1">
         <p style="font-weight: 600;">Contact Lana</p>
         <ul>
         Email:
