--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <section class="slider-container">
                             <!-- Slide 1 -->
                             <div class="slide">
-                                <img src="images/thanhma-.png" alt="Original" 
+                                <img src="images/thanhma.png" alt="Original" 
                                 onmouseover="this.src='images/thanhma-hi.png'" 
                                 onmouseout="this.src='images/thanhma-.png'"
                                 onclick="document.getElementById('popup1').style.display='block'">
@@ -59,7 +59,7 @@
                             </div>
                             <!-- Slide 2 -->
                             <div class="slide">
-                              <img src="images/coffee-.png" alt="Original" 
+                              <img src="images/coffee.png" alt="Original" 
                               onmouseover="this.src='images/phinblend.png'" 
                               onmouseout="this.src='images/coffee-.png'"
                               onclick="document.getElementById('popup2').style.display='block'">
@@ -67,7 +67,7 @@
                           </div>
                             <!-- Slide 3 -->
                             <div class="slide">
-                              <img src="images/3dfoodstall-.png" alt="Original" 
+                              <img src="images/3dfoodstall.png" alt="Original" 
                               onmouseover="this.src='images/3dfoodstall-full.png'" 
                               onmouseout="this.src='images/3dfoodstall-.png'"
                               onclick="document.getElementById('popup3').style.display='block'">
@@ -75,7 +75,7 @@
                           </div>
                             <!-- Slide 4 -->
                             <div class="slide">
-                              <img src="images/foodwaste-.png" alt="Original" 
+                              <img src="images/foodwaste.png" alt="Original" 
                               onmouseover="this.src='images/foodwaste-hi.png'" 
                               onmouseout="this.src='images/foodwaste-.png'"
                               onclick="document.getElementById('popup4').style.display='block'">
@@ -832,7 +832,7 @@
     <footer>
         <div class="container">
         <div class="grid-container"> 
-      <div class="grid-item col-2" style="padding: var(--spacing-md) var(--spacing-lg);">
+      <div class="grid-item col-2">
         <p style="font-weight: 600;">Experience</p>
         <p>Intern Graphic Designer</p>
         <p>Central studio Design-Communication, Lugano, Switzerland (2016)</p>
