--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <div class="slide">
                                 <img src="images/thanhma.png" alt="Original" 
                                 onmouseover="this.src='images/thanhma-hi.png'" 
-                                onmouseout="this.src='images/thanhma-.png'"
+                                onmouseout="this.src='images/thanhma.png'"
                                 onclick="document.getElementById('popup1').style.display='block'">
                                 <div class="slide-caption">Fintech Character Design</div>
                             </div>
@@ -61,7 +61,7 @@
                             <div class="slide">
                               <img src="images/coffee.png" alt="Original" 
                               onmouseover="this.src='images/phinblend.png'" 
-                              onmouseout="this.src='images/coffee-.png'"
+                              onmouseout="this.src='images/coffee.png'"
                               onclick="document.getElementById('popup2').style.display='block'">
                               <div class="slide-caption">Coffee Packaging Design</div>
                           </div>
@@ -69,7 +69,7 @@
                             <div class="slide">
                               <img src="images/3dfoodstall.png" alt="Original" 
                               onmouseover="this.src='images/3dfoodstall-full.png'" 
-                              onmouseout="this.src='images/3dfoodstall-.png'"
+                              onmouseout="this.src='images/3dfoodstall.png'"
                               onclick="document.getElementById('popup3').style.display='block'">
                               <div class="slide-caption">Nystagmus and 3D Model Design for Accessibility</div>
                           </div>
@@ -77,7 +77,7 @@
                             <div class="slide">
                               <img src="images/foodwaste.png" alt="Original" 
                               onmouseover="this.src='images/foodwaste-hi.png'" 
-                              onmouseout="this.src='images/foodwaste-.png'"
+                              onmouseout="this.src='images/foodwaste.png'"
                               onclick="document.getElementById('popup4').style.display='block'">
                               <div class="slide-caption">Food Waste Management Research</div>
                           </div>
