--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="grid-item col-6" style="padding: var(--spacing-sm);">
           <p class="site-description">From appealing digital to packaging designs,
           Lana's work is always a-peel-ing. As a curious creative designer, she’s diving deeper 
-          into the world of inclusivity, learning how to peel back barriers and create designs that resonate with everyone.
-          Meet Lana, ‘la banane’ designer, growing her skills to make design a little sweeter for all!</p>
+          into the world of inclusivity, learning how to peel back barriers and create designs that resonate with everyone.</p>
+          <p>Meet Lana, ‘la banane’ designer, growing her skills to make design a little sweeter for all!</p>
         </div>
         </div>
         <div class="container">
