--- a/index.html
+++ b/index.html
@@ -370,19 +370,16 @@
     <h3>Understanding nystagmus</h3>
     <p>Nystagmus is a visual impairment characterized by involuntary, repetitive eye movements that can affect a person’s ability to focus on objects, perceive depth, and maintain spatial awareness. These challenges can lead to difficulties in daily tasks such as reading, navigating unfamiliar environments, and maintaining balance. For individuals with nystagmus, the world can feel unstable and disorienting, impacting their confidence and independence.</p>
     <p>One of the lesser discussed struggles faced by individuals with nystagmus is the impact on proprioception, the body’s ability to sense its position and movement in space. Proprioception relies heavily on visual input to maintain balance and spatial orientation. However, for individuals with nystagmus, the brain receives distorted or incomplete visual information, making it harder to gauge distances, avoid obstacles, or perform tasks that require hand-eye coordination.</p>
-    <a href="https://www.rnib.org.uk/your-eyes/eye-conditions-az/nystagmus/" target="_blank">[Source]</a>
-    <p></p>
     <span><br></span>
     <h3>Why focus on nystagmus?</h3>
     <p>Unlike more widely recognized visual impairments, nystagmus poses a distinct set of challenges that require specialized solutions. Individuals with nystagmus often struggle with tasks that rely on steady visual input, such as reading, driving, or navigating unfamiliar spaces. Despite these significant hurdles, there remains a lack of tailored assistive tools and technologies specifically designed to support this community.</p>
     <p>Moreover, the prevalence of nystagmus is higher than many realize. According to the Royal National Institute of Blind People (RNIB), approximately 24 in every 10,000 people live with some form of nystagmus. Yet public awareness of this condition remains low, contributing to gaps in support services and technological advancements.</p>
     <p>Addressing nystagmus through innovative design not only promotes inclusivity but also sets a precedent for how emerging technologies can cater to niche disabilities. It highlights the importance of thinking beyond generalized solutions and creating tools that cater to specific, nuanced needs in the broader context of accessibility and human-centered design.</p>
-    <a href="https://www.rnib.org.uk/your-eyes/eye-conditions-az/nystagmus/" target="_blank">[Source]</a>
-    <p></p>
-    <span><br></span>
     <h3>Role of 3D model design</h3>
     <p>3D models, especially those tailored for accessibility, provide opportunities to enhance depth perception, improve spatial awareness, and offer interactive, engaging experiences that adapt to individual needs.</p>
     <p>By addressing the unique challenges of nystagmus through 3D model design, this approach not only fosters greater inclusivity but also opens new possibilities for learning and independence. As technology continues to evolve, digital 3D models will remain a powerful tool in breaking down barriers and improving the quality of life for individuals living with visual impairments.</p>
+    <span><br></span>
+    <a href="https://www.rnib.org.uk/your-eyes/eye-conditions-az/nystagmus/" target="_blank">[Source]</a>
     <h2>Understanding nystagmus</h2>
     <p>Nystagmus is generally classified into two major types:</p>
     <span><br></span>
@@ -404,18 +401,18 @@
     <p>Optic nerve: Transmits visual signals from the retina to the brain.</p>
     <p>Primary visual cortex (V1): The first brain region that processes visual information.</p>
     <p>Oculomotor control centers: Areas of the brain responsible for controlling eye movements, including:</p>
-    <p style="text-indent: 3em;">Brainstem: Contains key nuclei (e.g., the oculomotor nucleus) that regulate eye muscles.</p>
-    <p style="text-indent: 3em;">Cerebellum: Helps fine-tune eye movements to ensure they are smooth and coordinated.</p>
-    <p style="text-indent: 3em;">Frontal eye fields: Involved in voluntary eye movements.</p>
+    <p style="margin-left: 3em;">Brainstem: Contains key nuclei (e.g., the oculomotor nucleus) that regulate eye muscles.</p>
+    <p style="margin-left: 3em;">Cerebellum: Helps fine-tune eye movements to ensure they are smooth and coordinated.</p>
+    <p style="margin-left: 3em;">Frontal eye fields: Involved in voluntary eye movements.</p>
     <span><br></span>
     <h4>How do abnormalities cause nystagmus?</h4>
     <p>Infantile nystagmus occurs when feedback loops between the brain and eyes malfunction, leading to uncontrolled oscillations of the eyes.</p>
     <p>There are two main feedback loops involved in normal eye control:</p>
-    <p style="text-indent: 3em;">The fixation loop – Keeps the eyes stable on a target.</p>
-    <p style="text-indent: 3em;">The gaze-holding loop – Ensures that the eyes stay aligned when looking in different directions.</p>
+    <p style="margin-left: 3em;">The fixation loop – Keeps the eyes stable on a target.</p>
+    <p style="margin-left: 3em;">The gaze-holding loop – Ensures that the eyes stay aligned when looking in different directions.</p>
     <p>In people with nystagmus, one or both loops are disrupted due to abnormalities in the brain’s control centers or how the eyes send feedback to the brain. As a result:</p>
-    <p style="text-indent: 3em;">The brain misinterprets visual feedback, causing the eyes to drift away from the target.</p>
-    <p style="text-indent: 3em;">The brain then overcorrects, leading to the characteristic rhythmic oscillations of nystagmus.</p>
+    <p style="margin-left: 3em;">The brain misinterprets visual feedback, causing the eyes to drift away from the target.</p>
+    <p style="margin-left: 3em;">The brain then overcorrects, leading to the characteristic rhythmic oscillations of nystagmus.</p>
     <span><br></span>
     <h4>Key brain structures implicated:</h4>
     <p>Medial vestibular nucleus: Coordinates head and eye movements.</p>
@@ -664,34 +661,29 @@
         alternative proteins,
       we decided to choose sustainable food production and food waste tracking as our main focus for the research.</p>
       <h3>Why we chose these trends?</h3>
-      <p>According to research conducted on household food waste in Canada by the National Zero Waste Council in 2022, 63% of food waste is avoidable. For Canada as a whole, that amounts to almost 2.3 million tonnes of edible food wasted each year, costing Canadians more than twenty billion dollars
-        <a href="https://lovefoodhatewaste.ca/about/food-waste/" target="_blank">[Source]</a>.
-      </p>
+      <p>According to research conducted on household food waste in Canada by the National Zero Waste Council in 2022, 63% of food waste is avoidable. For Canada as a whole, that amounts to almost 2.3 million tonnes of edible food wasted each year, costing Canadians more than twenty billion dollars.</p>
       <h2>Context</h2>
       <p>This research examines emerging technologies, such as smart sensors and AI-driven systems, to explore their potential to reduce food waste in the industry. The study aims to provide actionable solutions for improving sustainability and efficiency in food waste management by analyzing trends and expert insights.</p>
       <p>Recognizing that many of these technologies are currently adopted primarily by large organizations, this research emphasizes making future tech trends more accessible and inclusive for small business owners. The study seeks to empower small-scale F&B operators to leverage these innovations, ensuring that the benefits of technological advancements extend to all levels of the industry.</p>
+      <span><br></span>
+      <a href="https://lovefoodhatewaste.ca/about/food-waste/" target="_blank">[Source]</a>
       <h2>Global impacts</h2>
       <p>
-        The world wastes over 1 billion tonnes of food annually—equivalent to one-fifth of all food available to consumers at the retail, food service, and household levels. Additionally, 13% of food is lost in the supply chain, according to the FAO
-      <a href="https://www.wrap.ngo/resources/report/global-action-drive-food-loss-and-waste-reduction" target="_blank">[Source]</a>.
+        The world wastes over 1 billion tonnes of food annually—equivalent to one-fifth of all food available to consumers at the retail, food service, and household levels. Additionally, 13% of food is lost in the supply chain, according to the FAO.
       </p>
       <span><br></span>
       <h3>Environmental impact</h3>
       <p>Global food waste contribution to climate change: Food waste accounts for approximately 8-10% of global greenhouse gas emissions.</p>
-      <p>Technologies like AI and IoT can optimize supply chains and reduce excess production, lowering carbon footprints
-        <a href="https://www.fao.org/platform-food-loss-waste/en/" target="_blank">[Source]</a>.
-      </p>
+      <p>Technologies like AI and IoT can optimize supply chains and reduce excess production, lowering carbon footprints.</p>
       <span><br></span>
       <h3>Economic impact</h3>
-      <p>Implementing smart systems in food businesses can lead to significant cost savings by enhancing inventory management, accurately predicting demand, and minimizing spoilage. A report by WRAP highlights that foodservice operators can achieve a return of £6 for every £1 invested in food waste reduction initiatives
-        <a href="https://www.thegrocer.co.uk/news/wrap-report-shows-financial-benefits-of-food-waste-reduction/568613.article" target="_blank">[Source]</a>.
+      <p>Implementing smart systems in food businesses can lead to significant cost savings by enhancing inventory management, accurately predicting demand, and minimizing spoilage. A report by WRAP highlights that foodservice operators can achieve a return of £6 for every £1 invested in food waste reduction initiatives.
       </p>
       <p>These savings are realized through several key improvements:</p>
       <p>Enhanced inventory tracking: Smart systems provide real-time data on stock levels, enabling businesses to order only what is necessary and reduce overstocking.</p>
       <p>Demand forecasting: AI-driven analytics predict customer demand patterns, allowing for more precise purchasing and preparation, thereby decreasing the likelihood of excess food.</p>
       <p>Spoilage reduction: Monitoring tools identify perishable items approaching their expiration, prompting timely utilization or discounts to prevent waste.</p>
-      <p>The WRAP report underscores the economic and environmental benefits of such investments, advocating for broader adoption across the foodservice industry
-        <a href="https://www.wrap.ngo/resources/report/benefits-reducing-global-food-waste" target="_blank">[Source]</a>.
+      <p>The WRAP report underscores the economic and environmental benefits of such investments, advocating for broader adoption across the foodservice industry.
       </p>
       <span><br></span>
       <h3>Social impact</h3>
@@ -704,9 +696,14 @@
       <p>Innovative Solutions
         Through initiatives like hydroponic farming and virtual farmers' markets, WFP supports communities in growing, storing, and selling food sustainably, even in challenging environments.</p>
       <p>Supportive Policies
-        WFP works on policies like the U.S. Farm Bill, which facilitates the redistribution of surplus American crops—such as rice, corn, and wheat—to feed hungry populations, ensuring excess food reaches those in need
-      <a href="https://www.wfpusa.org/articles/how-food-waste-affects-world-hunger/#:~:text=How%20Much%20Food%20Do%20We,undernourished%20people%20across%20the%20globe." target="_blank">[Source]</a>.
+        WFP works on policies like the U.S. Farm Bill, which facilitates the redistribution of surplus American crops—such as rice, corn, and wheat—to feed hungry populations, ensuring excess food reaches those in need.
       </p>
+      <span><br></span>
+      <a href="https://www.fao.org/platform-food-loss-waste/en/" target="_blank">[Source]</a>
+      <a href="https://www.thegrocer.co.uk/news/wrap-report-shows-financial-benefits-of-food-waste-reduction/568613.article" target="_blank">[Source]</a>
+      <a href="https://www.wrap.ngo/resources/report/benefits-reducing-global-food-waste" target="_blank">[Source]</a>
+      <a href="https://www.wfpusa.org/articles/how-food-waste-affects-world-hunger/#:~:text=How%20Much%20Food%20Do%20We,undernourished%20people%20across%20the%20globe." target="_blank">[Source]</a>
+      <a href="https://www.wrap.ngo/resources/report/global-action-drive-food-loss-and-waste-reduction" target="_blank">[Source]</a>
       <h2>Challenges</h2>
       <h3>What are people saying in the food industry</h3>
       <p>We conducted interviews with food industry professionals to gain insights into their goals, challenges, and frustrations within the food service sector. Through these conversations, we explored their unique perspectives on the industry's evolving needs and identified common pain points in areas such as food waste management, operational efficiency, and customer engagement.</p>
@@ -730,9 +727,10 @@
       <h3>Challenges faced by small businesses</h3>
       <p>Limited Resources: Many small businesses operate with constrained budgets, making significant investments in technology difficult.</p>
       <p>Lack of Technical Expertise: A shortage of in-house technical skills can impede the effective implementation and utilization of advanced tools.</p>
-      <p>Scalability Issues: Solutions designed for large enterprises may not be suitable or cost-effective for smaller operations
-        <a href="https://vorecol.com/blogs/blog-challenges-faced-by-small-businesses-in-adopting-digital-transformation-8836" target="_blank">[Source]</a>.
+      <p>Scalability Issues: Solutions designed for large enterprises may not be suitable or cost-effective for smaller operations.
       </p>
+      <p></p>
+      <a href="https://vorecol.com/blogs/blog-challenges-faced-by-small-businesses-in-adopting-digital-transformation-8836" target="_blank">[Source]</a>
       <h2>Food industry and technologies</h2>
       <p>We examined the current technologies employed by restaurants and identified opportunities for innovation by mapping out potential solutions. Although our primary focus is on restaurant operations, these technologies hold the potential to revolutionize food waste management across the broader food industry. By addressing inefficiencies and enhancing sustainability, these advancements can create significant positive impacts at every stage of the food supply chain.</p>
     <span><br></span>
