--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
       <p>This research examines emerging technologies, such as smart sensors and AI-driven systems, to explore their potential to reduce food waste in the industry. The study aims to provide actionable solutions for improving sustainability and efficiency in food waste management by analyzing trends and expert insights.</p>
       <p>Recognizing that many of these technologies are currently adopted primarily by large organizations, this research emphasizes making future tech trends more accessible and inclusive for small business owners. The study seeks to empower small-scale F&B operators to leverage these innovations, ensuring that the benefits of technological advancements extend to all levels of the industry.</p>
       <span><br></span>
-      <a href="https://lovefoodhatewaste.ca/about/food-waste/" target="_blank">[Source]</a>
+      <a href="https://lovefoodhatewaste.ca/about/food-waste/" target="_blank">[Love Food Hate Waste]</a>
       <h2>Global impacts</h2>
       <p>
         The world wastes over 1 billion tonnes of food annually—equivalent to one-fifth of all food available to consumers at the retail, food service, and household levels. Additionally, 13% of food is lost in the supply chain, according to the FAO.
@@ -699,11 +699,11 @@
         WFP works on policies like the U.S. Farm Bill, which facilitates the redistribution of surplus American crops—such as rice, corn, and wheat—to feed hungry populations, ensuring excess food reaches those in need.
       </p>
       <span><br></span>
-      <a href="https://www.fao.org/platform-food-loss-waste/en/" target="_blank">[Source]</a>
-      <a href="https://www.thegrocer.co.uk/news/wrap-report-shows-financial-benefits-of-food-waste-reduction/568613.article" target="_blank">[Source]</a>
-      <a href="https://www.wrap.ngo/resources/report/benefits-reducing-global-food-waste" target="_blank">[Source]</a>
-      <a href="https://www.wfpusa.org/articles/how-food-waste-affects-world-hunger/#:~:text=How%20Much%20Food%20Do%20We,undernourished%20people%20across%20the%20globe." target="_blank">[Source]</a>
-      <a href="https://www.wrap.ngo/resources/report/global-action-drive-food-loss-and-waste-reduction" target="_blank">[Source]</a>
+      <a href="https://www.fao.org/platform-food-loss-waste/en/" target="_blank">[FAO]</a>
+      <a href="https://www.thegrocer.co.uk/news/wrap-report-shows-financial-benefits-of-food-waste-reduction/568613.article" target="_blank">[The Grocer]</a>
+      <a href="https://www.wrap.ngo/resources/report/benefits-reducing-global-food-waste" target="_blank">[WRAP]</a>
+      <a href="https://www.wfpusa.org/articles/how-food-waste-affects-world-hunger/#:~:text=How%20Much%20Food%20Do%20We,undernourished%20people%20across%20the%20globe." target="_blank">[WFP]</a>
+      <a href="https://www.wrap.ngo/resources/report/global-action-drive-food-loss-and-waste-reduction" target="_blank">[WRAP]</a>
       <h2>Challenges</h2>
       <h3>What are people saying in the food industry</h3>
       <p>We conducted interviews with food industry professionals to gain insights into their goals, challenges, and frustrations within the food service sector. Through these conversations, we explored their unique perspectives on the industry's evolving needs and identified common pain points in areas such as food waste management, operational efficiency, and customer engagement.</p>
@@ -729,7 +729,7 @@
       <p>Lack of Technical Expertise: A shortage of in-house technical skills can impede the effective implementation and utilization of advanced tools.</p>
       <p>Scalability Issues: Solutions designed for large enterprises may not be suitable or cost-effective for smaller operations.
       </p>
-      <p></p>
+      <span><br></span>
       <a href="https://vorecol.com/blogs/blog-challenges-faced-by-small-businesses-in-adopting-digital-transformation-8836" target="_blank">[Source]</a>
       <h2>Food industry and technologies</h2>
       <p>We examined the current technologies employed by restaurants and identified opportunities for innovation by mapping out potential solutions. Although our primary focus is on restaurant operations, these technologies hold the potential to revolutionize food waste management across the broader food industry. By addressing inefficiencies and enhancing sustainability, these advancements can create significant positive impacts at every stage of the food supply chain.</p>
