--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
             <p>Such apprehensions led public health bodies like the World Health Organization and various national governments to advise against cash transactions and the use of digital payments instead. The need for social distancing and mobility restrictions accelerated this shift toward digital platforms, where consumers could shop, make payments, and access services while minimizing physical contact.</p>
             <p>The demand has been increasing, and as a result, service providers have changed their provision to meet these changing needs. This transition into digital methods of paying for a service is very multi-dimensional in nature, catering to the requirements of different consumers. The fourth wave of the Covid-19 pandemic has created an economic impact which is unprecedented in magnitude, with many industries being hit globally. However, the rapid growth of electronic payment systems in the banking industry has shown a bright side and helped make the financial ecosystem more robust and modernized.</p>
             <p>Besides, demographic factors did not affect the change in spending behavior through electronic payments during the COVID-19 pandemic. Maybe the explanation is that the strict social distancing in Vietnam during the pandemic, and which required all people, irrespective of age, occupation, and gender, to stay confined within their homes, thus their personal necessities and spending would become more unified among different demographics.</p>
-              <a href="https://www.researchgate.net/publication/375639962_An_Empirical_Insight_into_Adoption_Spending_with_Digital_Payment_System_in_Vietnam_During_Covid_19_Era" target="_blank">[Source]</a>
+            <span><br></span>  
+            Source: <a href="https://www.researchgate.net/publication/375639962_An_Empirical_Insight_into_Adoption_Spending_with_Digital_Payment_System_in_Vietnam_During_Covid_19_Era" target="_blank">[Research Gate]</a>
             <h2>Challenges and opportunities</h2>
             <h3>Narrow target audience pre-pandemic</h3>
             <h4>Challenge:</h4>
@@ -120,9 +121,6 @@
             <h4>Digital payment usage growth:</h4>
               <p>This trend is especially phenomenal in Vietnam, with a 170% surge in the volume of online payment transactions in 2020, according to the State Bank of Vietnam, and up to 40% more users making QR code payments. This reflects a broader regional movement in Southeast Asia, where many consumers have increasingly adopted cashless transactions. In fact, 84% of consumers in the region reported a shift toward cashless living, making Southeast Asia lead the transition into digital payments. On average, consumers in Southeast Asia can maintain a cashless lifestyle for 10.3 days-a figure matched by Malaysia and second in the region only to the Philippines at 12 days.</p>
               <p>It is in this transformation that, particularly, Vietnam is setting the pace: rapid development, uptake of digital payment platforms through mobile banking applications, QR code, and e-wallets. Its government's thrust on financial inclusions and an increasing fintech innovation have accelerated the move toward digital payment modes, especially in both rural and urban populations. In particular, Vietnam's leading position acts as a driving force toward a cashless economy in the region; it will consequently lay the bedrock for the same increased digitization and deeper integration across Southeast Asia.</p>
-            <a href="https://www.visa.com.my/dam/VCOM/regional/ap/documents/visa-cpa-report-2021-smt.pdf?" target="_blank">[Source]</a>
-            <a href="https://www.statista.com/statistics/1315058/vietnam-qr-code-payment-usage/" target="_blank">[Source]</a>
-          <p></p>
             <span><br></span>
           <h3>Outdated branding strategy</h3>
           <h4>Challenge:</h4>
@@ -130,12 +128,14 @@
         <span><br></span>
           <h4>Social media engagement:</h4>
         <p>In 2020, Vietnam recorded an estimated 73.56 million social network users, about 75.6% of the country's total population. Of these users, about 23 million were between 18 and 34 years of age, nearly equally divided in terms of gender. Social media was dominated by Facebook, where users predominantly engaged with video and photo content, using tools such as Facebook Messenger for communication and buying goods online. It describes the high degree of social media use among Vietnamese customers, further down the road toward an economy with complete or minimal use of cash transactions and digital means of payment. Companies utilizing those platforms for marketing purposes, therefore, would achieve much better access to such a tech-savvy audience: for example, this could have significantly accelerated user acquisition for VNPAY-QR in the cashless economic transition.</p>
-          <a href="https://marketreport.io/social-media-report-vietnam-2020" target="_blank">[Source]</a>
+        Sources:
+        <a href="https://www.visa.com.my/dam/VCOM/regional/ap/documents/visa-cpa-report-2021-smt.pdf?" target="_blank">[Visa PDF]</a>
+        <a href="https://www.statista.com/statistics/1315058/vietnam-qr-code-payment-usage/" target="_blank">[Statista]</a>
+        <a href="https://marketreport.io/social-media-report-vietnam-2020" target="_blank">[Marketreport]</a>
         
         <h2>Design Process</h2>
         <p>Every individual is unique, and so are brands. Making a brand more humanistic can make it stand out in the competitive marketplace. One of the methods through which this is done is by developing a brand mascot, thereby giving the brand an identity with which people can relate. A well-designed mascot makes a brand memorable to differentiate it from other businesses selling similar products.</p>
         <p>Brands like VNPAY-QR can use mascots to increase audience engagement by giving a "face" to the brand. People naturally would feel more at ease interacting with a relatable persona rather than a faceless entity. Similar to how personal connections are stronger when there is a recognizable individual involved, consumers are more likely to participate in brand activities and conversations when a mascot is present.</p>
-        <a href="https://www.sketchy.digital/blog/brand-mascot-character-development" target="_blank">[Source]</a>
         <p></p>
         <span><br></span>
         <h3>Defining the character</h3>
@@ -162,6 +162,9 @@
         <span><br></span>
           <p>To balance this relatability with the character's symbolic heroism, subtle elements were added to remind users of his superhuman qualities. A coat was added to give him a dynamic, heroic silhouette; a sleek mask and a pair of gloves lent a futuristic touch and hinted at his tech-savviness and problem-solving abilities.
           These elements are subtle but help drive home the point that Thanh Ma is not a regular character but one who has the wisdom and strength to lead users through the maze of digital payments. This blend of familiarity and heroism helps position the character as both a trustworthy guide and an aspirational figure in VNPAY-QR's brand narrative.</p>
+        <span><br></span>
+        Source:
+        <a href="https://www.sketchy.digital/blog/brand-mascot-character-development" target="_blank">[Sketchy]</a>
           <h2>Result</h2>
     <h3>Vision and symbolism:</h3>
     <p>Thanh Ma, or "The God of Code," was envisioned as a heroic figure personifying the power of modern technology in simplifying life. As much as he embodies the strength, wisdom, and commanding presence associated with gods, he is approachable and friendly. Thanh Ma acts as a crucial bridge between the maze of fintech solutions and the user's practical needs, demystifying digital payments and building trust through a more relatable, humanized story.</p>
@@ -379,7 +382,7 @@
     <p>3D models, especially those tailored for accessibility, provide opportunities to enhance depth perception, improve spatial awareness, and offer interactive, engaging experiences that adapt to individual needs.</p>
     <p>By addressing the unique challenges of nystagmus through 3D model design, this approach not only fosters greater inclusivity but also opens new possibilities for learning and independence. As technology continues to evolve, digital 3D models will remain a powerful tool in breaking down barriers and improving the quality of life for individuals living with visual impairments.</p>
     <span><br></span>
-    <a href="https://www.rnib.org.uk/your-eyes/eye-conditions-az/nystagmus/" target="_blank">[Source]</a>
+    <a href="https://www.rnib.org.uk/your-eyes/eye-conditions-az/nystagmus/" target="_blank">[RNIB]</a>
     <h2>Understanding nystagmus</h2>
     <p>Nystagmus is generally classified into two major types:</p>
     <span><br></span>
@@ -436,8 +439,9 @@
     <p>Associated with abnormal calcium channels in neurons.</p>
     <p>These mutations affect signal transmission in the brain and contribute to nystagmus.</p>
     <span><br></span>
-    <a href="https://pubmed.ncbi.nlm.nih.gov/12234898/" target="_blank">[Source]</a>
-    <a href="https://www.aao.org/education/disease-review/clinical-guidelines-childhood-nystagmus-workup" target="_blank">[Source]</a>
+    Sources:
+    <a href="https://pubmed.ncbi.nlm.nih.gov/12234898/" target="_blank">[Pub Med]</a>
+    <a href="https://www.aao.org/education/disease-review/clinical-guidelines-childhood-nystagmus-workup" target="_blank">[AAA]</a>
     <a href="https://www.barnesandnoble.com/w/advances-in-understanding-mechanisms-and-treatment-of-infantile-forms-of-nystagmus-r-john-leigh/1101399498?utm_source=chatgpt.com" target="_blank">[Book]</a>
     <p></p>
     <span><br></span>
@@ -464,8 +468,9 @@
     <p style="text-indent: 3em;"> Antiepileptics, sedatives, or alcohol</p>
     <p>Head trauma or brain injury.</p>
     <span><br></span>
-    <a href="https://www.sciencedirect.com/science/article/pii/S1052305724004300" target="_blank">[Source]</a>
-      <a href="https://nystagmusnetwork.org/acquired-nystagmus/" target="_blank">[Source]</a>
+    Sources:
+    <a href="https://www.sciencedirect.com/science/article/pii/S1052305724004300" target="_blank">[Science Direct]</a>
+      <a href="https://nystagmusnetwork.org/acquired-nystagmus/" target="_blank">[Nystagmus Network]</a>
     <p></p>
       <span><br></span>
     <h3>Comparison:</h3>
@@ -524,9 +529,10 @@
     <p>Shifting gaze could be perceived as nervousness or lack of confidence.</p>
     <p>This can result in social exclusion and awkward interactions, especially in job interviews, dating, and public speaking situations.</p>
 <span><br></span>
-  <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC1772873/#sec2" target="_blank">[Source]</a>
-  <a href="https://www.cdc.gov/vision-health/about-eye-disorders/vision-loss-mental-health.html#:~:text=Vision%20loss%2C%20depression%20and%20anxiety,in%20people%20with%20vision%20loss." target="_blank">[Source]</a>
-  <a href="https://www.sciencedirect.com/science/article/abs/pii/S1936657420301928#:~:text=15,and%20reduced%20well%2Dbeing." target="_blank">[Source]</a>
+Sources:
+  <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC1772873/#sec2" target="_blank">[PMC]</a>
+  <a href="https://www.cdc.gov/vision-health/about-eye-disorders/vision-loss-mental-health.html#:~:text=Vision%20loss%2C%20depression%20and%20anxiety,in%20people%20with%20vision%20loss." target="_blank">[CDC]</a>
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S1936657420301928#:~:text=15,and%20reduced%20well%2Dbeing." target="_blank">[Science Direct]</a>
 
   <h2>How 3D model design helps in accessibility</h2>
     <h3>Improved spatial understanding and navigation</h3>
@@ -545,7 +551,8 @@
     <p>In space recognition learning, interactive 3D models allow users to practice identifying spatial relationships and interact with objects in virtual spaces, improving their spatial awareness and memory.</p>
     <p>These models help users learn to recognize objects by their shape, size, and position, reinforcing their ability to navigate environments. For instance, in geography or architecture education, users can explore cities, landmarks, or historical sites through 3D models, enhanced by auditory or haptic feedback, making the experience more immersive and accessible.</p>
     <span><br></span>
-    <a href="https://www.researchgate.net/publication/319491874_3D_Simulation_of_Navigation_Problem_of_People_with_Cerebral_Visual_Impairment" target="_blank">[Source]</a>
+    Source:
+    <a href="https://www.researchgate.net/publication/319491874_3D_Simulation_of_Navigation_Problem_of_People_with_Cerebral_Visual_Impairment" target="_blank">[Research Gate]</a>
     <p></p>
     <h2>Prototype idea</h2>
     <p>3D models can be designed to accommodate individuals with nystagmus by incorporating the following features:</p>
@@ -581,9 +588,10 @@
     <div id="model-container"></div>
     <text>Click to interact with the model. Click and drag to rotate the model. Double click to zoom in and out.</text>
     <span><br></span>
+    Sources:
     <a href="https://www.youtube.com/watch?v=whQI4fWVUlw" target="_blank">[Video]</a>
-    <a href="https://xraccess.org/bcxr-report/" target="_blank">[Source]</a>
-    <a href="https://site.unibo.it/invisible-eplus/en/resources/in-visible-guidelines-for-the-realization-of-3d-models.pdf/@@download/file/In-VisiBLe%20Guidelines%20for%20the%20realization%20of%203D%20models.pdf" target="_blank">[Source]</a>
+    <a href="https://xraccess.org/bcxr-report/" target="_blank">[Xraccess]</a>
+    <a href="https://site.unibo.it/invisible-eplus/en/resources/in-visible-guidelines-for-the-realization-of-3d-models.pdf/@@download/file/In-VisiBLe%20Guidelines%20for%20the%20realization%20of%203D%20models.pdf" target="_blank">[Unibo]</a>
     <p></p>
     <span><br></span>
     <h3>Using reality composer to customize 3D models for accessibility</h3>
@@ -666,6 +674,7 @@
       <p>This research examines emerging technologies, such as smart sensors and AI-driven systems, to explore their potential to reduce food waste in the industry. The study aims to provide actionable solutions for improving sustainability and efficiency in food waste management by analyzing trends and expert insights.</p>
       <p>Recognizing that many of these technologies are currently adopted primarily by large organizations, this research emphasizes making future tech trends more accessible and inclusive for small business owners. The study seeks to empower small-scale F&B operators to leverage these innovations, ensuring that the benefits of technological advancements extend to all levels of the industry.</p>
       <span><br></span>
+      Source:
       <a href="https://lovefoodhatewaste.ca/about/food-waste/" target="_blank">[Love Food Hate Waste]</a>
       <h2>Global impacts</h2>
       <p>
@@ -729,8 +738,6 @@
       <p>Lack of Technical Expertise: A shortage of in-house technical skills can impede the effective implementation and utilization of advanced tools.</p>
       <p>Scalability Issues: Solutions designed for large enterprises may not be suitable or cost-effective for smaller operations.
       </p>
-      <span><br></span>
-      <a href="https://vorecol.com/blogs/blog-challenges-faced-by-small-businesses-in-adopting-digital-transformation-8836" target="_blank">[Source]</a>
       <h2>Food industry and technologies</h2>
       <p>We examined the current technologies employed by restaurants and identified opportunities for innovation by mapping out potential solutions. Although our primary focus is on restaurant operations, these technologies hold the potential to revolutionize food waste management across the broader food industry. By addressing inefficiencies and enhancing sustainability, these advancements can create significant positive impacts at every stage of the food supply chain.</p>
     <span><br></span>
