--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lana's Portfolio</title>
+    <link rel="stylesheet" href="https://use.typekit.net/zqw6gbp.css">
     <link rel="stylesheet" href="style/styles.css">
    <script type="importmap">
 			{
@@ -128,6 +129,7 @@
         <span><br></span>
           <h4>Social media engagement:</h4>
         <p>In 2020, Vietnam recorded an estimated 73.56 million social network users, about 75.6% of the country's total population. Of these users, about 23 million were between 18 and 34 years of age, nearly equally divided in terms of gender. Social media was dominated by Facebook, where users predominantly engaged with video and photo content, using tools such as Facebook Messenger for communication and buying goods online. It describes the high degree of social media use among Vietnamese customers, further down the road toward an economy with complete or minimal use of cash transactions and digital means of payment. Companies utilizing those platforms for marketing purposes, therefore, would achieve much better access to such a tech-savvy audience: for example, this could have significantly accelerated user acquisition for VNPAY-QR in the cashless economic transition.</p>
+        <span><br></span>
         Sources:
         <a href="https://www.visa.com.my/dam/VCOM/regional/ap/documents/visa-cpa-report-2021-smt.pdf?" target="_blank">[Visa PDF]</a>
         <a href="https://www.statista.com/statistics/1315058/vietnam-qr-code-payment-usage/" target="_blank">[Statista]</a>
@@ -382,6 +384,7 @@
     <p>3D models, especially those tailored for accessibility, provide opportunities to enhance depth perception, improve spatial awareness, and offer interactive, engaging experiences that adapt to individual needs.</p>
     <p>By addressing the unique challenges of nystagmus through 3D model design, this approach not only fosters greater inclusivity but also opens new possibilities for learning and independence. As technology continues to evolve, digital 3D models will remain a powerful tool in breaking down barriers and improving the quality of life for individuals living with visual impairments.</p>
     <span><br></span>
+    Source:
     <a href="https://www.rnib.org.uk/your-eyes/eye-conditions-az/nystagmus/" target="_blank">[RNIB]</a>
     <h2>Understanding nystagmus</h2>
     <p>Nystagmus is generally classified into two major types:</p>
@@ -708,6 +711,7 @@ Sources:
         WFP works on policies like the U.S. Farm Bill, which facilitates the redistribution of surplus American crops—such as rice, corn, and wheat—to feed hungry populations, ensuring excess food reaches those in need.
       </p>
       <span><br></span>
+      Sources:
       <a href="https://www.fao.org/platform-food-loss-waste/en/" target="_blank">[FAO]</a>
       <a href="https://www.thegrocer.co.uk/news/wrap-report-shows-financial-benefits-of-food-waste-reduction/568613.article" target="_blank">[The Grocer]</a>
       <a href="https://www.wrap.ngo/resources/report/benefits-reducing-global-food-waste" target="_blank">[WRAP]</a>
