--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="site-description">From appealing digital to packaging designs,
           Lana's work is always a-peel-ing. As a curious creative designer, she’s diving deeper 
           into the world of inclusivity, learning how to peel back barriers and create designs that resonate with everyone.
-          <p>Meet Lana, ‘la banane’ designer, growing her skills to make design a little sweeter for all!</p>
+          Meet Lana, ‘la banane’ designer, growing her skills to make design a little sweeter for all!
           </div>
         </div>
         </div>
