update CSS new layout

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <main>
         <div class="container">
             <div class="grid-container">
-                <div class="grid-item col-6" style="padding: var(--spacing-xs);">
-            <h1 class="site-name">Lana (Hoang)</h1>
-            <h2 class="site-title">'la Banane'</h2>
+                <div class="grid-item col-16" style="padding: var(--spacing-xs);">
+            <div class="site-name">Lana (Hoang)</div>
+            <div class="site-title">'la Banane'</div>
         </div>
-        <div class="grid-item col-6" style="padding: var(--spacing-sm);">
+        <div class="grid-item col-16" style="padding: var(--spacing-sm);">
           <div class="site-description">From appealing digital to packaging designs,
           Lana's work is always a-peel-ing. As a curious creative designer, she’s diving deeper 
           into the world of inclusivity, learning how to peel back barriers and create designs that resonate with everyone.
@@ -44,10 +44,11 @@
         </div>
         </div>
         <div class="container">
+          <h1>Lana's Works</h1> 
+          <section class="contain-slide">
             <div class="grid-container">
-                <div class="column col-6" style="padding: 0px">
+                <div class="column col-16" style="padding: 0px">
                     <div class="content">
-                        <h1>Lana's Works</h1> 
 
                     <!-- Image Slider Section -->
                     <section class="slider-container">
@@ -88,6 +89,7 @@
             </div>
       </div>
         </div>
+      </section>
       </div>
       <!-- Pop-ups -->
       <div class="popup-container" id="popup1">
@@ -842,7 +844,7 @@ Sources:
     <footer>
         <div class="container">
         <div class="grid-container"> 
-      <div class="grid-item col-2">
+      <div class="grid-item col-5">
         <p style="font-weight: 600;">Experience</p>
         <p>Intern Graphic Designer</p>
         <p>Central studio Design-Communication, Lugano, Switzerland (2016)</p>
@@ -856,7 +858,7 @@ Sources:
         <p>Lacàph, Collective, Hochiminh, Vietnam</p>
         (2023-2024)
       </div>
-      <div class="grid-item col-2">
+      <div class="grid-item col-5">
         <p style="font-weight: 600;">Education</p>
         <p>Graphic Design Program</p>
         <p>CSIA Centro Scolastico per le industrie ​artistiche (School of Applied Arts), ​Lugano, Switzerland</p>
@@ -865,8 +867,8 @@ Sources:
         <p>Geogre Brown College, Toronto, Canada</p>
         (2024-2025)
       </div>
-      <div class="grid-item col-1"></div>
-    <div class="grid-item col-1">
+      <div class="grid-item col-3"></div>
+    <div class="grid-item col-3">
         <p style="font-weight: 600;">Contact Lana</p>
         <ul>
         Email:
@@ -881,7 +883,6 @@ Sources:
     </div>
 </div>
 </footer>
-<script src="scripts/homepage.js"></script>
 <script>
 // Select all pop-up triggers
 const popupTriggers = document.querySelectorAll('.popup-trigger');
