--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                               onmouseover="this.src='images/phinblend.png'" 
                               onmouseout="this.src='images/coffee.png'"
                               onclick="document.getElementById('popup2').style.display='block'">
-                              <div class="slide-caption">Coffee Packaging Design</div>
+                              <div class="slide-caption">Coffee Packaging Redesign</div>
                           </div>
                             <!-- Slide 3 -->
                             <div class="slide">
@@ -196,7 +196,7 @@
   <div class="popup-container" id="popup2">
     <div class="popup-content">
       <span class="close-button">&times;</span>
-      <p>Coffee Packaging Design | Client: Lacàph | Date: 2023</p>
+      <p>Coffee Packaging Redesign | Client: Lacàph | Date: 2023</p>
       <p>Researched, Illustrated, and Designed by Lana Hoang | Photographed by Kevin Lung | Coffee's Guided and Interviewed by Nguyen Nguyen</p>
       <span><br></span>
       <a href="https://www.lacaph.com/en/" target="_blank">[Lacàph's Website]</a>
