--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
         <h2>Design Process</h2>
         <p>Every individual is unique, and so are brands. Making a brand more humanistic can make it stand out in the competitive marketplace. One of the methods through which this is done is by developing a brand mascot, thereby giving the brand an identity with which people can relate. A well-designed mascot makes a brand memorable to differentiate it from other businesses selling similar products.</p>
         <p>Brands like VNPAY-QR can use mascots to increase audience engagement by giving a "face" to the brand. People naturally would feel more at ease interacting with a relatable persona rather than a faceless entity. Similar to how personal connections are stronger when there is a recognizable individual involved, consumers are more likely to participate in brand activities and conversations when a mascot is present.</p>
+        <span><br></span>
+        Source:
+        <a href="https://www.sketchy.digital/blog/brand-mascot-character-development" target="_blank">[Sketchy]</a>
         <p></p>
         <span><br></span>
         <h3>Defining the character</h3>
@@ -166,9 +169,7 @@
         <span><br></span>
           <p>To balance this relatability with the character's symbolic heroism, subtle elements were added to remind users of his superhuman qualities. A coat was added to give him a dynamic, heroic silhouette; a sleek mask and a pair of gloves lent a futuristic touch and hinted at his tech-savviness and problem-solving abilities.
           These elements are subtle but help drive home the point that Thanh Ma is not a regular character but one who has the wisdom and strength to lead users through the maze of digital payments. This blend of familiarity and heroism helps position the character as both a trustworthy guide and an aspirational figure in VNPAY-QR's brand narrative.</p>
-        <span><br></span>
-        Source:
-        <a href="https://www.sketchy.digital/blog/brand-mascot-character-development" target="_blank">[Sketchy]</a>
+
           <h2>Result</h2>
     <h3>Vision and symbolism:</h3>
     <p>Thanh Ma, or "The God of Code," was envisioned as a heroic figure personifying the power of modern technology in simplifying life. As much as he embodies the strength, wisdom, and commanding presence associated with gods, he is approachable and friendly. Thanh Ma acts as a crucial bridge between the maze of fintech solutions and the user's practical needs, demystifying digital payments and building trust through a more relatable, humanized story.</p>
@@ -263,7 +264,7 @@
       <p>Cà Phê Sữa Đá (Vietnamese Iced Coffee):</p>
       <p>Known for its strong, bold flavor, this drink combines phin-brewed coffee with sweetened condensed milk, creating a smooth and creamy balance. It’s typically served over ice, making it a refreshing beverage for Vietnam’s tropical climate.</p>
       <p>Bạc Xỉu:</p>
-      <p>Originating from Saigon (Ho Chi Minh City), Bạc Xỉu is a lighter, milkier variation of Vietnamese coffee. Made with more condensed milk and less coffee, it appeals to those who prefer a sweeter, less intense coffee experience. Historically, it was popular among children accompanying their parents to coffee shops.</p>
+      <p>Originating from Saigon (Ho Chi Minh City), Bạc Xỉu is a lighter, milkier variation of Vietnamese coffee. Made with more condensed milk and less coffee, it appeals to those who prefer a sweeter, less intense coffee.</p>
       <span><br></span>
       <h4>Espresso Blend (80% Arabica, 20% Robusta)</h4>
       <p>Flavor profile:</p>
@@ -578,7 +579,7 @@ Sources:
     <p>People perceive visual information differently depending on lighting conditions and contrast levels. Users with visual impairments often struggle to distinguish objects and text if the environment is too dark or too bright. Brightness adjustment allows users to customize the lighting in a virtual space to meet their specific visual needs.</p>
     <p>Brightness adjustment is an essential feature to make 3D models and virtual environments more accessible for users with visual impairments. It helps people with low contrast sensitivity, nystagmus, patchy vision, and other conditions that affect their ability to perceive objects in different lighting conditions.</p>
     <p>For individuals with nystagmus, involuntary eye movements make it harder to focus on objects in low light environments. Therefore, brightness control can improve their ability to detect objects in fragmented visual fields 
-      help certain colors stand out more clearly and.</p>
+      help certain colors stand out more clearly.</p>
     <div class="image-row">
       <img src="images/3dfoodstall-fullnight.jpg" class="twoimages">
       <img src="images/3dfoodstall-fullday.jpg" class="twoimages">
